fix padding on mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,5 @@
 html {
-		position: relative;
-	}
+	position: relative;
 }
 
 .thumbnail img {
@@ -21,19 +20,19 @@ html {
 
 html,
 body {
-  height: 100%;
+	height: 100%;
 	font-family: 'Sora', sans-serif;
 }
 
 body {
-  /* /* display: -ms-flexbox; */
-  /* display: flex; */
-  /* -ms-flex-align: center; */
-  /* align-items: center; */
-  /* padding-top: 40px; */
-  /* padding-bottom: 50px; */
-  /* background-color: #f5f5f5; */ */
-	margin-bottom: 60px;
+	/* /* display: -ms-flexbox; */
+	/* display: flex; */
+	/* -ms-flex-align: center; */
+	/* align-items: center; */
+	/* padding-top: 40px; */
+	/* padding-bottom: 50px; */
+	/* background-color: #f5f5f5; */
+	*/: 60px;
 	background-image: url(/images/background3.jpg);
 	background-size: cover;
 	background-attachment: fixed;
@@ -48,51 +47,48 @@ body {
 	color: #48575e;
 }
 
-
-
 .form-signin {
-  width: 100%;
-  max-width: 330px;
-  padding: 15px;
-  margin: auto;
+	width: 100%;
+	max-width: 330px;
+	padding: 15px;
+	margin: auto;
 }
 
 .form-signin .form-control {
-  position: relative;
-  box-sizing: border-box;
-  height: auto;
-  padding: 10px;
-  font-size: 16px;
+	position: relative;
+	box-sizing: border-box;
+	height: auto;
+	padding: 10px;
+	font-size: 16px;
 }
 
 .form-signin .form-control:focus {
-  z-index: 2;
+	z-index: 2;
 }
 
 .form-signin input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+	margin-bottom: -1px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+	margin-bottom: 10px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
 }
 
 /* Google Maps */
 #map {
-    height: 400px;
-    width: 100%;
+	height: 400px;
+	width: 100%;
 }
 
 /* Footer */
 
 main {
-	padding: 4rem;
+	padding: 4rem 0;
 	min-height: calc(100vh - 60px);
 }
-
 
 #main-footer {
 	text-align: center;
@@ -103,5 +99,5 @@ main {
 }
 
 #main-footer span {
-		color: #21c87a;
-	}
+	color: #21c87a;
+}
